scripts/sph/bindings.py


# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/particle_system_host.h: 60
if hasattr(_libs['SPH'], 'terminate_opencl'):
    terminate_opencl = _libs['SPH'].terminate_opencl
    terminate_opencl.argtypes = []
    terminate_opencl.restype = None

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/particle_system_host.h: 62
if hasattr(_libs['SPH'], 'sync_psdata_device_to_host'):
    sync_psdata_device_to_host = _libs['SPH'].sync_psdata_device_to_host
    sync_psdata_device_to_host.argtypes = [psdata, psdata_opencl]
    sync_psdata_device_to_host.restype = None

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/particle_system_host.h: 63
if hasattr(_libs['SPH'], 'sync_psdata_fields_device_to_host'):
    sync_psdata_fields_device_to_host = _libs['SPH'].sync_psdata_fields_device_to_host
    sync_psdata_fields_device_to_host.argtypes = [psdata, psdata_opencl, c_size_t, POINTER(POINTER(c_char))]
    sync_psdata_fields_device_to_host.restype = None

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/particle_system_host.h: 64
if hasattr(_libs['SPH'], 'sync_psdata_host_to_device'):
    sync_psdata_host_to_device = _libs['SPH'].sync_psdata_host_to_device
    sync_psdata_host_to_device.argtypes = [psdata, psdata_opencl, c_int]
    sync_psdata_host_to_device.restype = None

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/particle_system_host.h: 65
if hasattr(_libs['SPH'], 'sync_psdata_fields_host_to_device'):
    sync_psdata_fields_host_to_device = _libs['SPH'].sync_psdata_fields_host_to_device
    sync_psdata_fields_host_to_device.argtypes = [psdata, psdata_opencl, c_size_t, POINTER(POINTER(c_char))]
    sync_psdata_fields_host_to_device.restype = None

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/particle_system_host.h: 67
if hasattr(_libs['SPH'], 'populate_position_cuboid_device_opencl'):
    populate_position_cuboid_device_opencl = _libs['SPH'].populate_position_cuboid_device_opencl
    populate_position_cuboid_device_opencl.argtypes = [psdata_opencl, c_float, c_float, c_float, c_float, c_float, c_float, c_uint, c_uint, c_uint]
    populate_position_cuboid_device_opencl.restype = None

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/particle_system_host.h: 73
if hasattr(_libs['SPH'], 'rotate_particles_device_opencl'):
    rotate_particles_device_opencl = _libs['SPH'].rotate_particles_device_opencl
    rotate_particles_device_opencl.argtypes = [psdata_opencl, c_float, c_float, c_float]
    rotate_particles_device_opencl.restype = None

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/particle_system_host.h: 74
if hasattr(_libs['SPH'], 'call_for_all_particles_device_opencl'):
    call_for_all_particles_device_opencl = _libs['SPH'].call_for_all_particles_device_opencl
    call_for_all_particles_device_opencl.argtypes = [psdata_opencl, String]
    call_for_all_particles_device_opencl.restype = None

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/particle_system_host.h: 76
if hasattr(_libs['SPH'], 'compute_particle_bins_device_opencl'):
    compute_particle_bins_device_opencl = _libs['SPH'].compute_particle_bins_device_opencl
    compute_particle_bins_device_opencl.argtypes = [psdata_opencl]
    compute_particle_bins_device_opencl.restype = None

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/particle_system_host.h: 78
if hasattr(_libs['SPH'], 'compute_density_device_opencl'):
    compute_density_device_opencl = _libs['SPH'].compute_density_device_opencl
    compute_density_device_opencl.argtypes = [psdata_opencl]
    compute_density_device_opencl.restype = None

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/particle_system_host.h: 79
if hasattr(_libs['SPH'], 'compute_forces_device_opencl'):
    compute_forces_device_opencl = _libs['SPH'].compute_forces_device_opencl
    compute_forces_device_opencl.argtypes = [psdata_opencl]
    compute_forces_device_opencl.restype = None

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/particle_system_host.h: 80
if hasattr(_libs['SPH'], 'step_forward_device_opencl'):
    step_forward_device_opencl = _libs['SPH'].step_forward_device_opencl
    step_forward_device_opencl.argtypes = [psdata_opencl]
    step_forward_device_opencl.restype = None

if hasattr(_libs['SPH'], 'set_body_position_device_opencl'):
    set_body_position_device_opencl = _libs['SPH'].set_body_position_device_opencl
    set_body_position_device_opencl.argtypes = [psdata_opencl, c_uint, ndpointer(c_float, flags="C_CONTIGUOUS")]
    set_body_position_device_opencl.restype = None

if hasattr(_libs['SPH'], 'set_body_rotation_device_opencl'):
    set_body_rotation_device_opencl = _libs['SPH'].set_body_rotation_device_opencl
    set_body_rotation_device_opencl.argtypes = [psdata_opencl, c_uint, ndpointer(c_float, flags="C_CONTIGUOUS")]
    set_body_rotation_device_opencl.restype = None

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/platforminfo.h: 22
class struct_anon_64(Structure):
    pass

struct_anon_64.__slots__ = [
    'id',
    'name',
    'type',
    'opencl_version',
    'driver_version',
    'extensions',
    'compiler_available',
    'linker_available',
    'profile',
    'max_compute_units',
    'max_workgroup_size',
    'max_work_item_dimensions',
    'max_work_item_sizes',
    'pref_vector_width',
    'double_supported',
]
struct_anon_64._fields_ = [
    ('id', cl_device_id),
    ('name', String),
    ('type', cl_device_type),
    ('opencl_version', String),
    ('driver_version', String),
    ('extensions', String),
    ('compiler_available', cl_bool),
    ('linker_available', cl_bool),
    ('profile', String),
    ('max_compute_units', cl_uint),
    ('max_workgroup_size', cl_uint),
    ('max_work_item_dimensions', cl_uint),
    ('max_work_item_sizes', POINTER(c_size_t)),
    ('pref_vector_width', cl_uint),
    ('double_supported', cl_bool),
]

Device = struct_anon_64 # /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/platforminfo.h: 22

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/platforminfo.h: 29
class struct_anon_65(Structure):
    pass

struct_anon_65.__slots__ = [
    'id',
    'name',
    'devices',
    'num_devices',
]
struct_anon_65._fields_ = [
    ('id', cl_platform_id),
    ('name', String),
    ('devices', POINTER(Device)),
    ('num_devices', c_uint),
]

Platform = struct_anon_65 # /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/platforminfo.h: 29

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/platforminfo.h: 31
if hasattr(_libs['SPH'], 'get_opencl_platform_info'):
    get_opencl_platform_info = _libs['SPH'].get_opencl_platform_info
    get_opencl_platform_info.argtypes = [POINTER(POINTER(Platform)), POINTER(c_uint)]
    get_opencl_platform_info.restype = None

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/opencl/platforminfo.h: 32
if hasattr(_libs['SPH'], 'free_opencl_platform_info'):
    free_opencl_platform_info = _libs['SPH'].free_opencl_platform_info
    free_opencl_platform_info.argtypes = []
    free_opencl_platform_info.restype = None

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/stringly.h: 8
if hasattr(_libs['SPH'], 'allocate_string_typed_array'):
    allocate_string_typed_array = _libs['SPH'].allocate_string_typed_array
    allocate_string_typed_array.argtypes = [String, c_size_t]
    allocate_string_typed_array.restype = POINTER(None)

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/stringly.h: 9
if hasattr(_libs['SPH'], 'typeof_string_type'):
    typeof_string_type = _libs['SPH'].typeof_string_type
    typeof_string_type.argtypes = [String]
    typeof_string_type.restype = FieldType

# /media/HDD/Adam/Documents/Programming/Project/opencl-sph-private/src/stringly.h: 10
if hasattr(_libs['SPH'], 'sizeof_string_type'):
    sizeof_string_type = _libs['SPH'].sizeof_string_type
    sizeof_string_type.argtypes = [String]
    sizeof_string_type.restype = c_size_t

# No inserted files
